Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -189,15 +189,170 @@ BAILEY|A very good dog
   
   `IIF` evaluates a test in the first argument, then returns the value of the second argument if true, or the second if false, e.g., `IIF(Sex = 'Female', 'A good girl!', 'A good dog!')`
   
-*Note: Use single quotes `'` to mark text strings. Double quotes (`"`) are an alternative way to indicate a column name and can lead to unexpected results.*
+*Note: Use single quotes `'` to mark text strings. Double quotes (`"`) are an alternative way to indicate a column name in some SQL dialects and can lead to unexpected results.*
   
 SQL does not have a single data type that directly represents true or false values, so we will often use 1 and 0, respectively as the result of `CASE` or `IIF` when all we want is an indicator of whether or not a condition is true.
 
 ## FROM
 
+In the `FROM` clause, we define the combination of data sources, the result set, we will use to get the information we want. The `FROM` clause will start with a single data source, also known as the 'driving table,' and will accumulate other data sources, usually through a series of `JOIN` operations, like a snowball.
+
+![image](https://user-images.githubusercontent.com/95429216/197289246-8ed33645-b164-47ff-939e-edb0467448f7.png)
+
+*Pictured: A graphical representation of a complex query traversing many tables*
+
+We discussed previously the `CROSS JOIN` operation, but the more common `JOIN`s are `INNER` and `LEFT OUTER JOIN`. These operations typically follow the pattern of:
+```SQL 
+TYPE OF JOIN TABLE_TO_ADD ON TABLE_IN_RESULT_SET.COLUMN_NAME = TABLE_TO_ADD.COLUMN_NAME
+```
+
+The `ON` portion tells the database how we want it to make a match. Usually we will join on a single, exact matching condition, but we can use multiple conditions or use an inequality to look for rows that qualify for inclusion based on a difference between the values; however, these latter two cases are also often easier to understand if part of the comparison is done in the `WHERE` clause.
+
+`INNER JOIN`s will create a result set out of the rows that match between the current result set and the table to add. Any rows that do not have a match in either table are discarded.
+
+`LEFT OUTER JOIN`s, on the other hand, will keep all rows in the current result set regardless of whether there is a match in the table to add, but will produce a `NULL` or missing value in place of data from the second table where there is no exact match.
+
+Returning to our canine friends, we have a table of Dogs and we have a table of Breeds.
+
+```SQL
+SELECT TOP 5
+Breed_Name
+FROM Breeds
+```
+
+       Breed_Name     |
+                |:---:|
+   Affenpinschers     |
+    Afghan Hounds     |
+    Afghan Hounds     |
+Airedale Terriers     |
+           Akitas     |
+
+We can `JOIN` this table of Breeds to our table of Dogs to get a list of breeds with their doggie representatives (or, alternatively, dogs with their respective breeds). We suspect that we do not have every breed represented in our sample (an optional relationship), though, so we will start with a `LEFT OUTER JOIN`
+
+```SQL
+SELECT TOP 5
+Breed_Name
+FROM Breeds
+LEFT OUTER JOIN Dogs on Breeds.Breed_ID = Dogs.Breed_ID
+```
+       Breed_Name| Dog_Name
+       |:---:|:---:|
+   Affenpinschers  |CHARLIE
+    Afghan Hounds   | ROMEO
+    Afghan Hounds    | ZEUS
+Airedale Terriers     |REMY
+           Akitas     ||
+  
+There were no Akitas in our sample of adopted dogs, so there is a blank in the place of a name for an Akita.
+
+If we use an `INNER JOIN` instead:
+
+```SQL
+SELECT TOP 5
+Breed_Name
+FROM Breeds
+INNER JOIN Dogs on Breeds.Breed_ID = Dogs.Breed_ID
+```
+       Breed_Name| Dog_Name
+       |:---:|:---:|
+   Affenpinschers  |CHARLIE
+    Afghan Hounds   | ROMEO
+    Afghan Hounds    | ZEUS
+Airedale Terriers     |REMY
+ American English Coonhounds     |JACK
+ 
+ The row for Akitas is left out because there was no matching row found.
+ 
+ *Note* Two points of caution on outer joins of any flavor.
+ 1. Outer joins (left, right, or otherwise) tend to be slower than inner joins, because the database engine has to keep making two decisions (A: Do these rows match? B: Is the right hand side missing instead of a mismatch?) If a query runs slowly, reconsider whether you really want to see rows with missing values.
+ 2. Using an inner join after an outer join will remove rows without an exact match that the outer join had previously kept, because there ws not an exact match to the missing value in the later, inner, join. Therefore, using outer joins once often means committing to using them for all remaining tables in the `FROM` clause.
+
+After adding one table to the result set, we can add any number of other tables to the result set by repeating the 
+```SQL 
+TYPE OF JOIN TABLE_TO_ADD ON TABLE_IN_RESULT_SET.COLUMN_NAME = TABLE_TO_ADD.COLUMN_NAME
+```
+pattern we discussed before. For example, we could get a list of all dogs, their breeds, and their complete histories with HFS using a query like:
+
+```SQL
+SELECT TOP 5
+Dogs.Dog_Name,
+Breeds.Breed_Name,
+Events.Date,
+Event_Types.Description
+FROM Breeds
+INNER JOIN Dogs on Breeds.Breed_ID = Dogs.Breed_ID
+INNER JOIN Events on Dogs.Breed_ID = Events.Breed_ID
+INNER JOIN Event_Types on Events.Event_Type_ID = Event_Types.Event_Type_ID
+```
+
+Dog_Name |     Breed_Name |       Date | Description|
+ :---:        |        :---:        |     :---:       | :---:             |
+ CHARLIE | Affenpinschers | 2021-12-30 |     Intake|
+ CHARLIE | Affenpinschers | 2022-08-16 |   Grooming|
+ CHARLIE | Affenpinschers | 2022-08-18 |   Adoption|
+    ZEUS |  Afghan Hounds | 2018-07-14 |     Intake|
+    ZEUS |  Afghan Hounds | 2020-03-05 |Spay/Neuter|
+    
+In the examples so far, we have followed a straight line through the tables so that each table added to the result set joins to the table that we previously joined.
+
+```
+ Breeds
+  \
+   Dogs
+    \
+     Events
+      \
+       Event_Types
+```
+
+However, it is possible to join a new table to any previous part of the result set.
+
+```
+ 
+       Dogs
+      // \
+Breeds    Events
+           \
+            Event_Types
+```
+
+```SQL
+SELECT TOP 5
+Dogs.Dog_Name,
+Breeds.Breed_Name,
+Events.Date,
+Event_Types.Description
+FROM Dogs
+INNER JOIN Events on Dogs.Breed_ID = Events.Breed_ID
+INNER JOIN Event_Types on Events.Event_Type_ID = Event_Types.Event_Type_ID
+INNER JOIN Breeds on Breeds.Breed_ID = Dogs.Breed_ID
+```
+    
+It is also possible to reference the same table twice in the same query, effectively 'joining' the table back to itself. For example, suppose we wanted to match dogs with potential playmates of the same sex:
+
+```SQL
+SELECT TOP 5
+Dogs.Dog_Name,
+Second_Dog.Dog_Name as Playmate
+FROM Dogs
+INNER JOIN Dogs AS Second_Dog on Dogs.Sex = Second_Dog.Sex
+WHERE Dogs.Dog_ID < Second_Dog.Dog_ID -- Makes sure each pair is unique
+```
+
+Dog_Name| Playmate|
+:---:|:---:|
+    LUNA|    BELLA|
+    LUNA|    DAISY|
+    LUNA|     LUCY|
+    LUNA|   BAILEY|
+    LUNA|     NALA|
+
+`AS` creates an alias or alternative name for the second reference to the same table, so the database knows which version of which column we want where.
+
 ## WHERE
 
-The `WHERE` clause filters the result set we create in the `FROM` clause down to the rows we want to keep. The `WHERE` clause amounts to a long logical test applied to each row. If the result is true then the row is kept; otherwise it is removed from the result set.
+The `WHERE` clause trims the result set we create in the `FROM` clause down to the rows we want to keep. The `WHERE` clause amounts to a long logical test applied to each row. If the result is true then the row is kept; otherwise it is removed from the result set.
 
 For example, HFS received the following request:
 
