Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -30,7 +30,7 @@ For example, let's talk about dogs.
 
 <details>
   <summary>
-Heartland Family Shelter (HFS) is a non-profit, no-kill shelter finding homes for very good dogs since 1870. We have a list of very good dogs adopted from the shelter <a href = "https://github.com/HFS-Analytics/SQL-Overview/blob/main/Dogs.csv"> here</a>)
+Happy Furbaby Shelter (HFS) is a non-profit, no-kill shelter finding homes for very good dogs since 1875. We have a list of very good dogs adopted from the shelter <a href = "https://github.com/HFS-Analytics/SQL-Overview/blob/main/Dogs.csv"> here</a>)
     </summary>
 **Note:** These are fictional dogs generated from data provided by <a href = "https://akc.org"> the American Kennel Club</a>. Any resemblence to actual dogs, living or in Heaven, is completely coincidental.
   
