Update 4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md

--- a/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
+++ b/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
@@ -1,1 +1,107 @@
+In the previous lesson, we discussed some basic query clauses that obtain results on an observation-by-observation basis. However, sometimes we will want to know information at the level of a group, such as the highest, lowest, or average value among a set of observations or members. These types of questions are addressed using aggregate functions, which compute a representative value for a defined group of cases.
 
+For example, let's talk about dogs.
+
+![image](https://user-images.githubusercontent.com/95429216/199610747-49401d00-0c3f-4c31-9160-4f588945a1ba.png)
+*Pictured: One very large dog, one very small dog, and a human (not a dog)*
+
+Consider the question "How big is a dog?" - Here we could be asking one of two questions:
+- How big is one particular dog (e.g., Fido)
+- How big are dogs in general?
+
+These two questions are distinct, but their answers can inform each other. If I say that Fido weighs 40 pounds, that may sound like a lot to you, or it may sound like not very much. We would need information about the **typical** weights for dogs to know how Fido compares. If we say that dogs, on average, weigh about 38 pounds, then 40 lb Fido is not terribly unusual.
+
+On the other hand, some breeds of dogs are larger than others, and there is variation within each breed. If Fido is a chihuahua, then 40 pounds is surprisingly large. If, however, he is a Great Dane, then 40 pounds would place him at the small end of the scale.
+
+# Aggregate Functions
+
+SQL offers a handful of standard aggregate functions as follows:
+
+|Function | Description |
+|:--- | :--- |
+|AVG | Gets the average (artithmetic mean value) |
+|COUNT | Gets the number of observations in each group |
+|MAX | Gets the highest value for the group |
+|MIN | Gets the lowest value for the group |
+|VAR, STDEV | Give measures of dispersment, or how closely cases tend to stay close to the average |
+|SUM | Gets the total by adding all values together |
+
+In our database of dogs, we could find out how much our dogs weigh on average like so:
+
+```sql
+SELECT
+AVG(DOGS.WEIGHT)
+FROM DOGS
+```
+
+Which should return
+
+
+|AVG(WEIGHT)|
+|:---:|
+|38.88843|
+
+Or just shy of 39 pounds on average. If we wanted to also know how much all our dogs weighed combined (e.g., if we wanted to try to fit them all in an elevator), we could use:
+
+```sql
+SELECT
+AVG(DOGS.WEIGHT),
+SUM(DOGS.WEIGHT)
+FROM DOGS
+```
+
+to get
+
+
+|AVG(WEIGHT)| SUM(WEIGHT)|
+|:---:|:---:|
+|38.88843    |    9411|
+
+At more than 9000 lb, fitting these dogs in the elevator outside my office is a bad idea on many levels.
+
+# GROUP BY
+So far, we have discussed aggregates that cover the entire sample, which is not always a terribly interesting result. Often, we want to know how different groups or sub-groups compare in relation to each other. To do this, we can define groupings based on certain attributes listed in a `GROUP BY` clause.
+
+For example if we wanted to know how many male dogs we have versus females, we could write:
+
+```sql
+SELECT
+SEX,
+COUNT(*)
+FROM DOGS
+GROUP BY SEX
+```
+
+|Sex | COUNT(\*)|
+|:---:|:---:|
+| Female   |   121|
+|   Male   |   121|
+
+Here we used a `*` in the `COUNT` function because we do not particularly care what column gets counted, but we could also pass it the name of a specific column if we want to count non-null values.
+
+We can also group by multiple values to get all 
+
+# HAVING
+
+# WHERE
+It is good to note that the `GROUP BY` and `HAVING` clauses are applied after the `WHERE` clause. Consequently, we can exclude individual cases before aggregates are computed. For example, we can get the maximum, minimum, and average weight for all dogs who are more than 75 pounds:
+
+```sql
+SELECT
+BREED_NAME,
+MAX(WEIGHT),
+MIN(WEIGHT),
+AVG(WEIGHT)
+FROM DOGS 
+INNER JOIN BREEDS ON DOGS.BREED_ID = BREEDS.BREED_ID
+WHERE WEIGHT > 75
+GROUP BY BREED_NAME
+```
+
+|           Breed_Name|MAX(WEIGHT)| MIN(WEIGHT)| AVG(WEIGHT)|
+|:---:|:---:|:---:|:---:|
+| German Shepherd Dogs|         78|          78|          78|
+|           Retrievers|         78|          78|          78|
+|              Setters|         76|          76|          76|
+|             Spaniels|         81|          81|          81|
+|          Weimaraners|         83|          83|          83|
