Update 4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md

--- a/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
+++ b/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
@@ -66,10 +66,10 @@ For example if we wanted to know how many male dogs we have versus females, we c
 
 ```sql
 SELECT
-SEX,
+DOGS.SEX,
 COUNT(*)
 FROM DOGS
-GROUP BY SEX
+GROUP BY DOGS.SEX
 ```
 
 |Sex | COUNT(\*)|
@@ -79,7 +79,36 @@ GROUP BY SEX
 
 Here we used a `*` in the `COUNT` function because we do not particularly care what column gets counted, but we could also pass it the name of a specific column if we want to count non-null values.
 
-We can also group by multiple values to get all 
+We can also group by multiple values and get counts (or other aggregates) for all present combinations of those values. For example, we might want to know how many male and female dogs we have, and how many of each where already fixed when they came into the shelter (`FIXED_AT_INTAKE = 1`) or not yet fixed (`FIXED_AT_INTAKE = 0`). Often, we would display this as a cross-tabulation like so:
+
+||  **Male** | **Female** |
+|:--- | :---: | :---:|
+|**Already Fixed** | # of Fixed Males | # of Fixed Females |
+|**Not Yet Fixed** | # of Un-Fixed Males | # of Un-Fixed Females | 
+
+The query to get these values looks like this:
+
+```sql
+SELECT
+DOGS.SEX,
+DOGS.FIXED_AT_INTAKE,
+COUNT(*)
+FROM DOGS
+GROUP BY DOGS.SEX, DOGS.FIXED_AT_INTAKE
+```
+
+and the result looks like this, with each cell expressed as a row:
+
+|    SEX |FIXED_AT_INTAKE |COUNT(\*)
+| :---: | :---: | :---: |
+| Female |              0 |     121
+|   Male |              0 |      97
+|   Male |              1 |      24
+
+Now, you may wonder: why are there only three rows, but the table had four cells (two sexes \* two fixed statuses)? Recall from earlier, that `GROUP BY` will give 
+>  counts (or other aggregates) for all present combinations of those values
+
+If there were no female dogs who were fixed at the time of intake, then that cell in the cross-table would have a 0 for its count. Because the query did not find any female dogs who were fixed at intake, those (hypothetical) dogs were not *present* to be included in the count.
 
 # HAVING
 
