Update 4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md

--- a/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
+++ b/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
@@ -110,9 +110,53 @@ Now, you may wonder: why are there only three rows, but the table had four cells
 
 If there were no female dogs who were fixed at the time of intake, then that cell in the cross-table would have a 0 for its count. Because the query did not find any female dogs who were fixed at intake, those (hypothetical) dogs were not *present* to be included in the count.
 
+||  **Male** | **Female** |
+|:--- | :---: | :---:|
+|**Already Fixed** | 24 | 0 |
+|**Not Yet Fixed** | 97 | 121 | 
+
+*Note:* In a `SELECT` statement containing an aggregate function, any columns that are **not** aggregate calculations need to be referenced in the `GROUP BY` clause.
+
+```sql
+SELECT
+DOGS.SEX,
+COUNT(*)
+FROM DOGS
+```
+
+will result in an eror message, and the un-aggregated column (`SEX`) will need to be added to a `GROUP BY` clause. On the other hand, apparently it is permissible to include a column in `GROUP BY` without referencing it in `SELECT`, but this may not be useful, because we will have separated aggregates without any indication which groups these counts belong to!
+
 # HAVING
 
-# WHERE
+The `WHERE` clause filters out specific *rows* from the result set. Similarly, the `HAVING` clause can filter out *groups* based on aggregate values. For example, suppose we wanted to get a list of small dog breeds, defined as breeds in which no dog has a weight more than 10 pounds. We could phrase this request as:
+
+```sql
+SELECT 
+Breeds.Breed_Name, 
+MAX(Dogs.Weight) 
+FROM Breeds 
+INNER JOIN Dogs ON Breeds.Breed_ID = Dogs.Breed_ID 
+GROUP BY Breed_Name 
+HAVING MAX(Dogs.Weight) <= 10
+```
+
+to get:
+
+|                 Breed_Name |MAX(Dogs.Weight)|
+| :--- | ---:|
+|              Affenpinschers|               10|
+|           Brussels Griffons|               10|
+|             Chinese Crested|               10|
+|        English Toy Spaniels|               10|
+|               Japanese Chin|               10|
+|         Miniature Pinschers|                9|
+|                   Papillons|                5|
+|                 Pomeranians|                5|
+| Portuguese Podengo Pequenos|               10|
+
+If we are willing to take it on faith that all members of each breed weigh 10 lb or less, we could choose to leave the `MAX(Weight)` calculation out of the `SELECT` clause (keeping it only in the `HAVING` clause) and only getting a list of breeds.
+
+# Using WHERE with Aggregates
 It is good to note that the `GROUP BY` and `HAVING` clauses are applied after the `WHERE` clause. Consequently, we can exclude individual cases before aggregates are computed. For example, we can get the maximum, minimum, and average weight for all dogs who are more than 75 pounds:
 
 ```sql
