Update 4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md

--- a/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
+++ b/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
@@ -178,3 +178,27 @@ GROUP BY BREED_NAME
 |              Setters|         76|          76|          76|
 |             Spaniels|         81|          81|          81|
 |          Weimaraners|         83|          83|          83|
+
+# Using OVER to Compare Individuals to Aggregates
+
+Going back to our original example, if we know a given dog's weight and only want to (mentally) compare that weight against an average for all dogs or dogs of a particular breed, then using `GROUP BY` should be sufficient. However, if we want to compare all records to a relevant aggregate value, a different approach may be in order. 
+
+```sql
+SELECT TOP 5
+Dogs.Dog_Name,
+Breeds.Breed_Name,
+Dogs.Weight
+FROM Dogs
+INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
+```
+
+```sql
+SELECT TOP 5
+Dogs.Dog_Name,
+Dogs.Weight,
+Breeds.Breed_Name,
+AVG(Dogs.Weight)
+  OVER (PARTITION BY Breeds.Breed_ID) as Average_Weight_for_Breed
+FROM Dogs
+INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
+```
