Update 4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md

--- a/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
+++ b/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
@@ -183,6 +183,8 @@ GROUP BY BREED_NAME
 
 Going back to our original example, if we know a given dog's weight and only want to (mentally) compare that weight against an average for all dogs or dogs of a particular breed, then using `GROUP BY` should be sufficient. However, if we want to compare all records to a relevant aggregate value, a different approach may be in order. 
 
+As a review, the following query will get us each dog, its breed, and its weight.
+
 ```sql
 SELECT TOP 5
 Dogs.Dog_Name,
@@ -191,6 +193,27 @@ Dogs.Weight
 FROM Dogs
 INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
 ```
+
+It may be tempting to simply add a column for the average weight, grouped by breed:
+
+```sql
+SELECT TOP 5
+Dogs.Dog_Name,
+Breeds.Breed_Name,
+Dogs.Weight,
+AVG(Dogs.Weight) as Average_Weight_for_Breed
+FROM Dogs
+INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
+GROUP BY Breeds.Breed_Name
+```
+
+However, this query will either result in an error message along the lines of 
+
+> 'Dogs.Weight' is invalid in the select list because it is not contained in either an aggregate function or the GROUP BY clause
+
+or else you will get some strange result such as the result for only one dob per breed (depending on the exact implementation of SQL and the database being used).
+
+Instead, we should use the `OVER` clause to modify the average calculation. `OVER` lets us apply an aggregate calculation on a row-by-row basis and to determine the scope of an aggregate - which other rows are to be included in each row's result. `OVER` takes up to three arguments: `PARTITION BY`, `ORDER BY`, and `ROWS BETWEEN`. `PARTITION BY` is the simplest and most common usage, and operates much like `GROUP BY` in that it determines the level of grouping for the calculation to reflect. Here, we `PARTITION BY` the breed names, so each dog is presented with its weight and the average weight for other dogs of the same breed.
 
 ```sql
 SELECT TOP 5
@@ -202,3 +225,43 @@ AVG(Dogs.Weight)
 FROM Dogs
 INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
 ```
+
+|Dog_Name |Weight|                  Breed_Name| Average_Weight_for_Breed|
+|:---:|:---:|:---:|:---:|
+| CHARLIE |    10|              Affenpinschers|                     10.0|
+|    ZEUS |    51|               Afghan Hounds|                     52.5|
+|   ROMEO |    54|               Afghan Hounds|                     52.5|
+|    REMY |    53|           Airedale Terriers|                     53.0|
+|   STORM |    47| American English Coonhounds|                     51.0|
+
+Note that Zeus and Romeo are both Afghan Hounds and are presented with their own individual weights and the averages for their breeds.
+
+`ORDER BY` lets us control the ordering of the rows before the aggregate is calculated, which is useful for the `ROW_NUMBER` function. 
+
+`ROWS BETWEEN` also depends on `ORDER BY` (it should not be used without setting an order) and lets us define which rows are to be included according to their location relative to the current row (using the keywords `PRECEEDING`, `FOLLOWING`, and `CURRENT ROW`). This is most useful in terms of rolling averages and running totals. For example, 
+
+``` sql
+SELECT
+Dogs.Dog_Name,
+Breeds.Breed_Name,
+Dogs.Weight,
+COUNT(Dogs.Dog_ID)
+  OVER (PARTITION BY Breeds.Breed_ID ORDER BY Dogs.Weight DESC ROWS BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW)
+FROM Dogs
+INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
+``` 
+
+might give us a ranking of dogs by weight within breeds (1 being the heaviest dog for its breed) by taking a running count of dogs per breed, and 
+
+``` sql
+SELECT
+Dogs.Dog_Name,
+Breeds.Breed_Name,
+Dogs.Weight,
+AVG(Dogs.Dog_ID)
+  OVER (PARTITION BY Breeds.Breed_ID ORDER BY Dogs.Weight ASC ROWS BETWEEN 1 PRECEDING AND 1 FOLLOWING)
+FROM Dogs
+INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
+``` 
+
+might give us the agerage weight for each dog, the next lightest, and the next heaviest (if there are any). 
