Update 4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md

--- a/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
+++ b/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
@@ -23,7 +23,7 @@ SQL offers a handful of standard aggregate functions as follows:
 |COUNT | Gets the number of observations in each group |
 |MAX | Gets the highest value for the group |
 |MIN | Gets the lowest value for the group |
-|VAR, STDEV | Give measures of dispersment, or how closely cases tend to stay close to the average |
+|VAR, STDEV | Give measures of dispersment, or how closely cases tend to fall around the average |
 |SUM | Gets the total by adding all values together |
 
 In our database of dogs, we could find out how much our dogs weigh on average like so:
