Update 4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md

--- a/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
+++ b/4. SQL Statements 2 - Aggregate Functions, GROUP BY, and HAVING.md
@@ -211,7 +211,7 @@ However, this query will either result in an error message along the lines of
 
 > 'Dogs.Weight' is invalid in the select list because it is not contained in either an aggregate function or the GROUP BY clause
 
-or else you will get some strange result such as the result for only one dob per breed (depending on the exact implementation of SQL and the database being used).
+or else you will get some strange result such as the result for only one dog per breed (depending on the exact implementation of SQL and the database being used).
 
 Instead, we should use the `OVER` clause to modify the average calculation. `OVER` lets us apply an aggregate calculation on a row-by-row basis and to determine the scope of an aggregate - which other rows are to be included in each row's result. `OVER` takes up to three arguments: `PARTITION BY`, `ORDER BY`, and `ROWS BETWEEN`. `PARTITION BY` is the simplest and most common usage, and operates much like `GROUP BY` in that it determines the level of grouping for the calculation to reflect. Here, we `PARTITION BY` the breed names, so each dog is presented with its weight and the average weight for other dogs of the same breed.
 
@@ -264,4 +264,4 @@ FROM Dogs
 INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
 ``` 
 
-might give us the agerage weight for each dog, the next lightest, and the next heaviest (if there are any). 
+might give us the average weight for each dog, the next lightest, and the next heaviest (if there are any). 
